--- a/gabi-payano.html
+++ b/gabi-payano.html
@@ -45,14 +45,15 @@
                 </div>
                 <div class="inner cover">
                     <h1 class="cover-heading">Cover your page.</h1>
-                    <img id="sample" src="Images/Gabi-Payano.jpg" />
+                    <img id="sample" src="images/Gabi-Payano.jpg" />
                     <p id="demo"></p>
                     <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
                     <p class="lead">
                         <a href="#" class="btn btn-lg btn-default">Learn more</a>
                     </p>
                 </div>
-                <button onclick="myFunction()">Try it</button>
+                 <section class="hidden-section"> </section>
+                <button class="btn-default" onclick="myFunction()">Try it</button>
                 <div class="mastfoot">
                     <div class="inner">
                         <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
@@ -69,6 +70,6 @@
     <script src="../../dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-    <script src="Assets/main.js"></script>
+    <script src="assets/main.js"></script>
 </body>
 </html>
