--- a/gabi-payano.html
+++ b/gabi-payano.html
@@ -33,7 +33,7 @@
             <div class="cover-container">
                 <div class="masthead clearfix">
                     <div class="inner">
-                        <h3 class="masthead-brand">Cover</h3>
+                        <h3 class="masthead-brand">Web developer</h3>
                         <nav>
                             <ul class="nav masthead-nav">
                                 <li class="active"><a href="#">Home</a></li>
@@ -44,24 +44,27 @@
                     </div>
                 </div>
                 <div class="inner cover">
-                    <h1 class="cover-heading">Cover your page.</h1>
-                    <img id="sample" src="images/Gabi-Payano.jpg" />
-                    <p id="demo"></p>
+                    <h1 class="cover-heading">Location: Boston</h1>
+                    <img id="sample"  onclick="winAlert()" src="images/Gabi-Payano.jpg" />
+                    <section id="hidden-section"> </section>
                     <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
                     <p class="lead">
-                        <a href="#" class="btn btn-lg btn-default">Learn more</a>
+                        <button href="#" class="btn btn-lg btn-default"  onclick="myFunction()">Learn more</button>
                     </p>
                 </div>
-                 <section class="hidden-section"> </section>
-                <button class="btn-default" onclick="myFunction()">Try it</button>
+                
                 <div class="mastfoot">
                     <div class="inner">
-                        <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+                       
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <footer>
+        <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+
+    </footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
