adding windows feature for link visual

--- a/gabi-payano.html
+++ b/gabi-payano.html
@@ -9,17 +9,18 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
     <link rel="stylesheet" href="Assets/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
 
-            <title>Cover Template for Bootstrap</title>
-            <!-- Bootstrap core CSS -->
-            <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
-            <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-            <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-            <!-- Custom styles for this template -->
-            <link href="cover.css" rel="stylesheet">
-            <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-            <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+                    <title>Cover Template for Bootstrap</title>
+                    <!-- Bootstrap core CSS -->
+                    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+                    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+                    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+                    <!-- Custom styles for this template -->
+                    <link href="cover.css" rel="stylesheet">
+                    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+                    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -46,7 +47,45 @@
                 <div class="inner cover">
                     <h1 class="cover-heading">Location: Boston</h1>
                     <img id="sample"  onclick="winAlert()" src="images/Gabi-Payano.jpg" />
-                    <section id="hidden-section"> </section>
+                    <section id="hidden-section">
+                        <div class="test-container">
+                            <div class="shape-container">
+                                <a href="#">
+                                    <div class="shape-top">
+                                        <h1 class="test-txt">Welcome<br />to<br />Williams Funeral Home</h1>
+                                    </div>
+
+                                </a>
+                                <div class="shape-top-outer"></div>
+                                <div class="shape-left-container">
+
+
+                                </div>
+                                <a href="#">
+                                    <div class="shape-left"></div>
+                                </a>
+                                <div class="shape-left-outer"></div>
+
+                                <a href="#">
+                                    <div class="shape-left-far"></div>
+                                </a>
+                                <div class="shape-left-far-outer"></div>
+
+                                <a href="#">
+                                    <div class="shape-right"></div>
+                                </a>
+                                <div class="shape-right-outer"></div>
+
+                                <a href="#">
+                                    <div class="shape-right-far"></div>
+                                </a>
+                                <div class="shape-right-far-outer"></div>
+
+
+
+                            </div>
+                        </div>
+                    </section>
                     <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
                     <p class="lead">
                         <button href="#" class="btn btn-lg btn-default"  onclick="myFunction()">Learn more</button>
