changing name of index file

--- a/index.html.html
+++ b/index.html.html
@@ -48,43 +48,45 @@
                    <!-- <h1 class="cover-heading">Location: Boston</h1> -->
                     <img id="sample"  onclick="winAlert()" src="images/Gabi-Payano.jpg" />
                     <section id="hidden-section">
-                       
-                            <div class="shape-container">
-                                <a href="#">
-                                    <div class="shape-top">
-                                        <h1 class="test-txt">Welcome<br />to<br />Williams Funeral Home</h1>
-                                    </div>
+                        <button id="exit-button" onclick="exitWindows()">EXIT</button>
+                        <a href="something" class="button1 bouncy">Facebark</a>
 
-                                </a>
-                                <div class="shape-top-outer"></div>
-                                <div class="shape-left-container">
-
-
+                        <div class="shape-container">
+                            <a href="#">
+                                <div class="shape-top">
+                                    <h1 class="test-txt">Welcome<br />to<br /></h1>
                                 </div>
-                                <a href="#">
-                                    <div class="shape-left"></div>
-                                </a>
-                                <div class="shape-left-outer"></div>
 
-                                <a href="#">
-                                    <div class="shape-left-far"></div>
-                                </a>
-                                <div class="shape-left-far-outer"></div>
-
-                                <a href="#">
-                                    <div class="shape-right"></div>
-                                </a>
-                                <div class="shape-right-outer"></div>
-
-                                <a href="#">
-                                    <div class="shape-right-far"></div>
-                                </a>
-                                <div class="shape-right-far-outer"></div>
-
+                            </a>
+                            <div class="shape-top-outer"></div>
+                            <div class="shape-left-container">
 
 
                             </div>
-                       
+                            <a href="#">
+                                <div class="shape-left"></div>
+                            </a>
+                            <div class="shape-left-outer"></div>
+
+                            <a href="#">
+                                <div class="shape-left-far"></div>
+                            </a>
+                            <div class="shape-left-far-outer"></div>
+
+                            <a href="#">
+                                <div class="shape-right"></div>
+                            </a>
+                            <div class="shape-right-outer"></div>
+
+                            <a href="#">
+                                <div class="shape-right-far"></div>
+                            </a>
+                            <div class="shape-right-far-outer"></div>
+
+
+
+                        </div>
+
                     </section>
                     <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
                     <p class="lead">
