changes to assets file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
-    <link rel="stylesheet" href="Assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
 
@@ -93,10 +93,10 @@
                         <button href="#" class="btn btn-lg btn-default"  onclick="myFunction()">Projects</button>
                     </p>
                 </div>
-                
+
                 <div class="mastfoot">
                     <div class="inner">
-                       
+
                     </div>
                 </div>
             </div>
